--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,6 @@
         </dependency>
 
 
-
         <!-- ubacen, nz da li treba -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -60,6 +59,11 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
