--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/emailclient?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 server.port=8080
 jwt.secret=javainuse
