--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/emailclient?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 server.port=8080
 jwt.secret=javainuse
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
