--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/emailclient?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 server.port=8080
 jwt.secret=javainuse
+jwt.expirationDateInMs=40000
+jwt.refreshExpirationDateInMs=9000000
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
